Add english language, change some bugs, fixes all other

--- a/assets/css/_override.scss
+++ b/assets/css/_override.scss
@@ -50,8 +50,8 @@ $scrollbar-hover-color: #a9a9b3 !default;
 
 // ========== Selection ========== //
 // Color of the selected text
-$selection-color: rgba(53, 166, 247, 0.25) !default;
-$selection-color-dark: rgba(50, 112, 194, 0.4) !default;
+$selection-color: rgba(53, 247, 166, 0.25);
+$selection-color-dark: rgba(50, 194, 112, 0.4);
 // ========== Selection ========== //
 
 // ========== Header ========== //
